added dev-2 data on changelog

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: service_framework
 description: Another state management wrapper for InheritedElements.
-version: 0.0.1-dev.1
-homepage: https://github.com/rubcc95/flutter-service
+version: 0.0.1-dev.2
+repository: https://github.com/rubcc95/flutter-service
 issue_tracker: https://github.com/rubcc95/flutter-service/issues
 topics:
   - state-management  
